kubernetes/test2/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: defcoinapp-test2
  namespace: deflationcoin
spec:
  selector:
    matchLabels:
      app: defcoinapp-test2
  replicas: 1
  template:
    metadata:
      labels:
        app: defcoinapp-test2
    spec:
      imagePullSecrets:
        - name: deflationcoin-registry-cred
      topologySpreadConstraints:
      - maxSkew: 1
        whenUnsatisfiable: DoNotSchedule
        topologyKey: zone
        labelSelector:
          matchLabels:
            app: defcoinapp-test2
      containers:
        - env:
            - name: NODE_ENV
              value: test2
          image: deflationcoin.ru/defcoinapp-test2:1.0.129
          imagePullPolicy: IfNotPresent
          name: defcoinapp-test2
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            limits:
              cpu: "1"
              memory: 2Gi
            requests:
              cpu: 500m
              memory: 1Gi
          volumeMounts:
            - mountPath: /app/node_modules
              name: node-modules
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 30
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 60
      volumes:
        - name: node-modules
          persistentVolumeClaim:
            claimName: node-modules-pvc
