kubernetes/test2/service.yml
apiVersion: v1
kind: Service
metadata:
  name: defcoinapp-test2-service
  namespace: deflationcoin
spec:
  selector:
    app: defcoinapp-test2
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
